tests/snapshots/integration__integration_tests__switch__switch_base_without_create.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--base"
    - main
    - main
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mSwitched to worktree for [1mmain[0m[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
🟡 [33m--base flag is only used with --create, ignoring[0m
